# project-img-greyscale-conversion

./: .gitignore  CMakeLists.txt  README.md  gsc-opencv-cuda.cu  gsc-opencv.cpp
parallel/: CudaIGSC.h  OpenMPIGSC.h
sequential/: BasicIGSC.h  SeqIGSC.h
